# Rust

./: .gitignore  README.md  TODO
boardgame/: Cargo.toml
boardgame/assets/sprites/: chesspieces.ron  chesspiecesarray.ron  whiteblack.ron
boardgame/config/: display_config.ron  input.ron
boardgame/src/: color_piece.rs  main.rs  move_system.rs  piece.rs  player.rs  state.rs
colorrust/: Cargo.toml
colorrust/src/: main.rs
farmer/: Cargo.toml
farmer/assets/texture/: spritesheet.ron
farmer/src/: farmer.rs  main.rs
pong/: Cargo.toml  README  README.md
pong/src/: main.rs
pong_amethyst/: README.md
pong_amethyst/config/: display.ron
pong_amethyst/src/: .main.rs.swp  main.rs  pong.rs
prims/: Cargo.toml
prims/src/: main.rs  prims.rs
test/: Cargo.toml  progs.csv  sandbox.csv
test/src/: configs.rs  corona.rs  installer.rs  main.rs  main2.rs  prgm.rs  sandbox.rs
test/src/configs/: git_init.rs  git_status.rs
test/src/installer/: parseprgm.rs
