[package]
name = "farmer"
version = "0.1.0"
authors = ["Emi <Emanuel.boehm@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.0"
amethyst_tiles = "*"
[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
