[package]
name = "rust"
version = "0.1.0"
authors = ["emi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob="*"
error-chain="*"
csv="*"
runas="*"
dirs = "*"
git2 = "*"
curl="*"
reqwest="*"
serde="*"
serde_json="*"
serde_derive="*"
actix-web="*"
